<resources>
    <string name="app_name">메타몽</string>
    <string name="app_name_uppercase">METAMON</string>

    <!-- 공통 -->
    <string name="complete">완료</string>

    <!-- 하단 메뉴 -->
    <string name="menu_home">홈</string>
    <string name="menu_profile">프로필</string>
    <string name="error_login_message">로그인에 실패하였습니다.</string>

    <!-- 로그인 -->
    <string name="login">로그인</string>
    <string name="email_hint">이메일 주소를 입력해주세요.</string>
    <string name="password_hint">비밀번호를 입력해주세요.</string>
    <string name="forget">로그인 정보를 잊어버리셨나요?</string>

    <!-- 다이얼로그 -->
    <string name="cancel">취소</string>
    <string name="check">확인</string>

    <!-- 홈 -->
    <string name="sir">님</string>
    <string name="welcome">반갑습니다.</string>

</resources>