<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.andes.metamon.auth.presentation.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_logo"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:src="@mipmap/logo_metamon"
            app:layout_constraintBottom_toTopOf="@id/tv_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/anja_eliane"
            android:text="@string/app_name_uppercase"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/cl_bottom_round_view"
            app:layout_constraintEnd_toEndOf="@id/iv_logo"
            app:layout_constraintStart_toStartOf="@id/iv_logo"
            app:layout_constraintTop_toBottomOf="@id/iv_logo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom_round_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_bottom_blue_round_70_dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/gl_bottom_round_view_top">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view_email"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/bg_rectangle_white_round_20_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_login" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/email_hint"
                android:includeFontPadding="false"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:privateImeOptions="defaultInputmode=english"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/view_email"
                app:layout_constraintEnd_toEndOf="@id/view_email"
                app:layout_constraintStart_toStartOf="@id/view_email"
                app:layout_constraintTop_toTopOf="@id/view_email"
                tools:ignore="RtlSymmetry" />

            <View
                android:id="@+id/view_password"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/bg_rectangle_white_round_20_dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view_email" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/password_hint"
                android:includeFontPadding="false"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="20dp"
                android:privateImeOptions="defaultInputmode=english"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@id/view_password"
                app:layout_constraintEnd_toEndOf="@id/view_password"
                app:layout_constraintStart_toStartOf="@id/view_password"
                app:layout_constraintTop_toTopOf="@id/view_password"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/tv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:text="@string/forget"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/view_password"
                app:layout_constraintTop_toBottomOf="@id/view_password" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:src="@drawable/ic_right"
                app:layout_constraintBottom_toBottomOf="@id/tv_forget"
                app:layout_constraintStart_toEndOf="@id/tv_forget"
                app:layout_constraintTop_toTopOf="@id/tv_forget" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_next"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/bg_rectangle_white_round_5_dp"
                android:text="@string/complete"
                android:textAlignment="center"
                android:textColor="@color/blue"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_forget"
                app:layout_constraintVertical_bias="0.75" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_bottom_round_view_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.28" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>